[SCB-2449] update jmockit version to 1.31