@@ -42,6 +42,7 @@
     <argLine>-Dfile.encoding=UTF-8</argLine>
     <skip-remote-resource>true</skip-remote-resource>
     <werror.properties>-Werror</werror.properties>
+    <test.additional.args/>
     <dependency-check-maven.version>7.0.4</dependency-check-maven.version>
   </properties>
 
@@ -257,6 +258,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M5</version>
         <configuration>
+          <argLine>-Dio.netty.leakDetection.level=paranoid ${test.additional.args}</argLine>
           <skip>${maven.test.skip}</skip>
           <testFailureIgnore>${maven.test.failure.ignore}</testFailureIgnore>
           <excludes>
@@ -636,6 +638,12 @@
       </activation>
       <properties>
         <werror.properties/>
+        <test.additional.args>
+          -Djdk.attach.allowAttachSelf
+          --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+          --add-opens java.base/java.lang=ALL-UNNAMED
+          --add-opens java.base/java.io=ALL-UNNAMED
+        </test.additional.args>
       </properties>
     </profile>
   </profiles>
